# eng_ml_25

./: README.md
kobe/: README.md  pyproject.toml  requirements.txt
kobe/conf/base/: catalog.yml  parameters.yml  parameters_nome_do_pipeline.yml  parameters_split_train_teste.yml
kobe/docs/source/: conf.py
kobe/mlflow_runs/0/: meta.yaml
kobe/mlflow_runs/449109977047084958/: meta.yaml
kobe/mlflow_runs/449109977047084958/0a272fff95cc4de787347ab71627f6ea/: meta.yaml
kobe/mlflow_runs/449109977047084958/1bb7fc3562234c3ca658f2ca57f9ffa1/: meta.yaml
kobe/mlflow_runs/449109977047084958/354207c1998b4bae95e9389de6ce4f80/: meta.yaml
kobe/mlflow_runs/449109977047084958/49820a1545674241a284ad402e228660/: meta.yaml
kobe/mlflow_runs/449109977047084958/5515ea526ed64e128344b3984519bf3e/: meta.yaml
kobe/mlflow_runs/449109977047084958/66975c5b008a49829642e919f98e73d2/: meta.yaml
kobe/mlflow_runs/449109977047084958/6e5458b7544248749248e72fafa2923b/: meta.yaml
kobe/mlflow_runs/449109977047084958/8058a5c1a1794fc3a6bdbb865a28ab36/: meta.yaml
kobe/mlflow_runs/449109977047084958/bdae6c53039748e2832ea1f8de0bf542/: meta.yaml
kobe/mlflow_runs/449109977047084958/c06f33e58bff410f956220e82bc84dde/: meta.yaml
kobe/mlflow_runs/449109977047084958/cdbb3af8487c497481b6d46e26972cf8/: meta.yaml
kobe/mlflow_runs/mlruns/0/: meta.yaml
kobe/notebooks/: PreparacaoDados.ipynb  TreinoTeste.ipynb  classifier.ipynb  dev_modelo.ipynb  inferencia_mlflow_serve.ipynb  prod.csv
kobe/src/kobe/: pipeline_registry.py  settings.py
kobe/streamlit/: main.py
(+62 files in other folders)
